styles/styles.css
#keyboard {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.keyboard-row {
  text-align: center;
}
.key {
  display: inline-block;
  height: 70px;
  width: 60px;
  border: 1px solid #444;
  border-radius: 5px;
  transition: background-color .15s linear;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  /*label styles*/
  padding-left: 7px;
  padding-top: 2px;
  color: #444;
  font-family: 'Poppins';
}

.key.highlight {
  background-color: #A9B4C2;
}

